codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__completed_same_id_hook_output_survives_restart_snapshot.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: "hook_status_and_history_snapshot(&chat, \"restarted\", &history)"
---
restarted
activity:
"                                                                                "
"• Checking stop condition                                                       "
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  gpt-5.6-sol default · /tmp/project                                            "
history:
• Hook stopped
  └ continue with more context
